--- a/res/refs.bib
+++ b/res/refs.bib
@@ -35,3 +35,11 @@ Ben Strasser Dorothea Wagner
 https://dl.acm.org/doi/10.5555/2790174.2790186
 
 % ----------------------------
+
+@misc{tudelft,
+    title = {DAGs and Topological Ordering},
+    howpublished = {\url{
+                    https://ocw.tudelft.nl/wp-content/uploads/Algoritmiek_DAGs_and_Topological_Ordering.pdf
+                    }},
+    note = {TU Delft OpenCourseWare},
+}
