--- a/res/refs.bib
+++ b/res/refs.bib
@@ -8,6 +8,15 @@ Julian Dibbelt, Thomas Pajor, Ben Strasser, and Dorothea Wagner
 
 https://i11www.iti.kit.edu/extra/publications/dpsw-isftr-13.pdf
 
+@misc{ConnectionScanAlgorithmShort,
+    author = {Julian Dibbelt, Thomas Pajor, Ben Strasser, Dorothea Wagner},
+    title = {Intriguingly Simple and Fast Transit Routing},
+    howpublished = {\url{
+                    https://i11www.iti.kit.edu/extra/publications/dpsw-isftr-13.pdf
+                    }},
+},
+
+
 
 % ----------------------------
 
@@ -41,5 +50,16 @@ https://dl.acm.org/doi/10.5555/2790174.2790186
     howpublished = {\url{
                     https://ocw.tudelft.nl/wp-content/uploads/Algoritmiek_DAGs_and_Topological_Ordering.pdf
                     }},
-    note = {TU Delft OpenCourseWare},
+    note = {TU Delft OpenCourseWare, voir Lemma~3.20, pages~20--25},
+}
+
+
+% ----------------------------
+
+@misc{critèresAlgoPlusCourtCheminDAG,
+    author = {Jean Cardinal},
+    title = {Plus Courts Chemins dans les Graphes Acycliques},
+    note = {Slides du cours INFO-F203: Algorithmique 2, Université Libre de
+            Bruxelles, voir page~16},
+    year = {2021},
 }
