--- a/res/rapport.ltx
+++ b/res/rapport.ltx
@@ -69,9 +69,9 @@ algorithme de plus court chemin prenant en compte les trajets multimodaux, i.e.
 pouvant combiner différents modes de transport en commun. Celles-ci prennent
 également en compte, des segments de marche à pied entre les arrêts. Les deux
 algorithmes sont des variantes du Connection Scan Algorithm (CSA)
-\cite{ConnectionScanAlgorithmLong:2017}. Dans un premier temps, nous détaillons
+\cite{ConnectionScanAlgorithmLong:2017}. Dans un premier temps, nous détaillerons
 le fonctionnement et notre implémentation du CSA basique qui optimise seulement
-le temps d'arrivée. Dans un second temps, nous présentons notre second
+le temps d'arrivée. Dans un second temps, nous présenterons notre second
 algorithme, une version légèrement modifiée du mcpCSA (où mc signifie
 "multicritère" et p "profil") présenté dans
 \cite{ConnectionScanAlgorithmLong:2017}. Ce dernier peut prendre en
@@ -106,13 +106,59 @@ considération d'autres critères et optimise ceux-ci au sens pareto.
 
 %-------------------------------------------------------------------
 
+\section{Chargement des données GTFS}
+
+Avant que notre algorithme puisse déterminer le plus court chemin entre un arrêt de départ et un arrêt d'arrivée, notre programme doit d'abord charger les données nécessaires. Ces données, conformes au format \texttt{GTFS} (General Transit Feed Specification), contiennent toutes les informations liées aux arrêts, trajets, horaires et lignes de transport.\\
+
+Les données GTFS utilisées dans notre programme sont les données publiques fournies par \texttt{DE LIJN}, la \texttt{STIB}, le \texttt{TEC} et la \texttt{SNCB}.\\
+
+Le chargement des données est effectué via la fonction \texttt{loadOneCsvSet()} qui lit les fichiers suivants pour chaque opérateur :
+
+\begin{itemize}
+    \item \textbf{\texttt{stops.csv}} : contient les identifiants, noms et coordonnées géographiques des arrêts. Chaque arrêt est stocké dans une structure \texttt{Stop}, identifiée par son \texttt{stop\_id}.
+    
+    \item \textbf{\texttt{trips.csv}} : associe chaque \texttt{trip\_id} à une \texttt{route\_id}, représentant un parcours complet effectué par un véhicule.
+    
+    \item \textbf{\texttt{routes.csv}} : fournit le nom de chaque ligne, ainsi que le type de transport, et est identifiable grâce au \texttt{route\_id}. Ces données sont enregistrées dans une structure \texttt{RouteInfo} contenant toutes ces informations.
+    
+    \item \textbf{\texttt{stop\_times.csv}} : liste, pour chaque \texttt{trip}, les arrêts desservis dans l’ordre (\texttt{stop\_sequence}), avec l’heure de départ à chaque arrêt. Nous convertissons les horaires en secondes depuis minuit pour simplifier les comparaisons.
+\end{itemize}
+
+Une fois tous les fichiers lus, les informations sont regroupées en \textbf{connexions} représentant des trajets directs entre deux arrêts consécutifs d’un même trajet avec :
+\begin{itemize}
+    \item l’identifiant du trajet (\texttt{trip\_id}),
+    \item la ligne de transport concernée (\texttt{RouteInfo}),
+    \item l’arrêt de départ et d’arrivée (\texttt{Stop}),
+    \item le temps de départ et le temps d’arrivée (en secondes).
+\end{itemize}
+
+Toutes les connexions ainsi générées sont ensuite triées par heure de départ croissante, ce qui permet à l’algorithme CSA de fonctionner efficacement lors de la recherche du plus court chemin.
+
+\subsection{Construction des chemins à pied (\texttt{Footpath})}
+
+Avant de pouvoir exécuter l'algorithme du plus court chemin, il est également nécessaire de construire les chemins à pied possibles (\texttt{Footpath}) entre arrêts proches. Pour notre programme, nous avons décidé de limiter la marche à pied à 500 mètres à vol d'oiseau. Ce chemin sera emprunté pour rejoindre un arrêt s'il est plus rapide ou nécessaire pour un changement de ligne.\\
+
+Pour calculer ces \texttt{Footpath}, nous utilisons le \texttt{BallTree}. Celui-ci permet de réaliser des recherches de voisinage très rapides dans un espace à deux dimensions (latitude/longitude). Concrètement :
+
+\begin{itemize}
+    \item Tous les arrêts sont insérés dans un \texttt{BallTree}, avec leurs coordonnées GPS.
+    \item Pour chaque arrêt, le \texttt{BallTree} est interrogé pour trouver les arrêts situés dans un rayon de 500 mètres.
+    \item Un \texttt{Footpath} est alors créé entre l’arrêt source et chacun de ses voisins, avec une durée estimée basée sur une vitesse de marche moyenne (ici, 5 km/h).
+\end{itemize}
+
+Ces chemins à pied sont ensuite ajoutés à l’ensemble des connexions disponibles pour l’algorithme, au même titre que les trajets en transport en commun. Cela permet à l’utilisateur de combiner marche et transports publics pour atteindre sa destination le plus rapidement possible.
+
+%-------------------------------------------------------------------
+
 \section{CSA Basique}
 
 Le CSA basique permet de résoudre le problème suivant :
 
+\begin{quote}
 Étant donné l'horaire des véhicules, un arrêt de départ $pDep$, un arrêt d'arrivée
 $pArr$, et un temps de départ $tDep$, renvoyer les différents segments du trajets
 arrivant le plus tôt possible en $pArr$ en partant de $pDep$ en $tDep$.
+\end{quote}
 
 Notre version du CSA basique accepte des noms d’arrêts, qui ne sont pas
 forcément uniques, au lieu des identifiants uniques. Elle considère tous les
