--- a/res/rapport.ltx
+++ b/res/rapport.ltx
@@ -49,6 +49,7 @@
 
 %-------------------------------------------------------------------
 
+%TODO: remplacer l'adjectif basique (pas formel)
 
 %TODO: parler du chargement des données
 %TODO: parler du ballTree
@@ -437,10 +438,16 @@ le CSA respecte bien les deux~\hyperref[item:dagcriteresshortestpath]{critères
 
 \end{itemize}
 
+%-------------------------------------------------------------------
+
+\subsection{Complexité}
+
+% TODO complexité
+
 
 %-------------------------------------------------------------------
 
-\section{Description des algorithmes et méthodes utilisées pour la variante du problème}
+\section{CSA multicritère}
 
 % Explication de "dominer", de "optimisation Pareto"
 
